2009-04-12  Stephan Arts <stephan@xfce.org>

	* == Released 0.3.101 ==
	* NEWS: Update news for the release.
	* configure.in.in: Update version number.

2009-04-08	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in, docs/manual/da/images/, docs/manual/gl/images/: Fix
	  broken build due to incomplete integration of the Danish and Galician
	  manual translations.
	* exo-helper/exo-helper-launcher-dialog.c: Add gettext() call around
	  two strings which are already as translatable with N_() (bug #5203).

2009-02-24  Stephan Arts <stephan@xfce.org>

	* == Released 0.3.100 ==
	* NEWS: Update news for the release.
	* configure.in.in: Update version number.

2009-01-25	Jannis Pohlmann <jannis@xfce.org>

	* == Released 0.3.99.1 == 
	* NEWS: Update news for the release.
	* configure.in.in: Update version number.

2009-01-18	Jannis Pohlmann <jannis@xfce.org> 

	* configure.in.in: Add Makefiles for Spanish docs.

2009-01-14	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Post-release version bump.

2009-01-12	Stephan Arts <stephan@xfce.org>

	* === Released 0.3.93 ===
	* configure.in.in: Update version number

2009-01-11	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Add missing docs subdirectories.

2009-01-10	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update NEWS for the upcoming 0.3.93 release.

2008-12-08	Nick Schermer <nick@xfce.org>

	* exo/exo-icon-view.c: Don't setup bindings for shift+n and shift+p
	  so type-ahead search works as expected. Bug #4633.

2008-12-08	Nick Schermer <nick@xfce.org>

	* Fix all compiler warnings and fix some possibly uninitialized variables.

2008-11-23	Jannis Pohlmann <jannis@xfce.org>

	* exo-helper/main.c: Oops, I actually broke the --launch parameter. Fixed.

2008-11-23	Jannis Pohlmann <jannis@xfce.org>

	* exo-helper/exo-preferred-applications.desktop.in: Remove GenericName and
	  the "Xfce 4" prefix from the Name field.
	* exo-helper/main.c: Change order of the command line parameters so 