@@ -37,6 +37,11 @@ Renders an icon in a cell
 
 </para>
 
+<!-- ##### ARG ExoCellRendererIcon:gicon ##### -->
+<para>
+
+</para>
+
 <!-- ##### ARG ExoCellRendererIcon:icon ##### -->
 <para>
 
